2025-01-21 Albert Chu <chu11@llnl.gov>

	* README.build: Add notes on building with systemd.

2025-01-02 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.h: Fix header guard.

	* libipmiconsole/ipmiconsole_defs.h: Move header guard macros to
	top of file.

2024-04-12 Albert Chu <chu11@llnl.gov>

	* man/ipmipower.8.pre.in: Add help about "ipmiping" workaround and
	document it is needed on Intel M50FCP.

2024-04-05 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/api/ipmi-api.c (ipmi_cmd): Remove duplicate
	parameter check.

2024-04-02 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	--debugfile only available in debug mode.

2024-03-25 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/ipmi-sensors-oem-intel.c: Add missing include.

2024-03-23 Albert Chu <chu11@llnl.gov>

        * ipmi-sensors/ipmi-sensors-oem-intel-quanta-qssc-s4r.h,
	ipmi-sensors/ipmi-sensors/ipmi-sensors-oem-intel-s2600jf.h,
	ipmi-sensors/ipmi-sensors-oem-intel-s5500wb.h: Fix header guard
	definitions.

2024-03-22 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/sel/ipmi-sel-string-supermicro-common.h: Add missing
	function prototype.

2024-03-22 Alex Owen

	* ipmi-oem/ipmi-oem-dell.c
	(ipmi_oem_dell_get_power_consumption_data): Increase output
	precision in cumalative energy output.

2024-02-21 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan6-conf-section.c
	(ipv6_dynamic_address_source_type_checkout): Fix incorrect output
	of IPv6_Dynamic_Address_Source_Type.

2024-01-27 Albert Chu <chu11@llnl.gov>

	* configure.ac: Remove duplicate inb/outb declaration check.  Could
	lead to broken builds on non-x86 systems.

2024-01-25 Anonymous

	* configure.ac: check for inb and outb declarations in header
	files.

2023-09-29 Albert Chu <chu11@llnl.gov>

	* README: add rpm build notes

2023-09-28 Albert Chu <chu11@llnl.gov>

	* README: add some build notes / help.

2023-09-05 Felip Moll <felip.moll@schedmd.com>
